--- a/PortfolioWebsite.txt/index.html
+++ b/PortfolioWebsite.txt/index.html
@@ -24,7 +24,7 @@
 			<div class="content">
 				<h1>Emily Bruner</h1>
 				<p class="major">
-					<!--[-->A full stack web developer who is passionate about clean code, accessibility, and creative
+					<!--[-->A web developer who is passionate about clean code, accessibility, and creative
 					solutions.
 					<!--]-->
 				</p>
@@ -64,7 +64,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="images\greatidea.png" alt="" />
+				<img src="images\greatidea.png" alt="great idea webpage" />
 			</div>
 		</section>
 
@@ -79,7 +79,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="images\lambdaabout.PNG" alt="" />
+				<img src="images\lambdaabout.PNG" alt="lambda about webpage" />
 			</div>
 		</section>
 
@@ -109,52 +109,13 @@
 
 					</section>
 					<section>
-						<span class="icon style2 major fa-cog"></span>
-						<h3>Magna</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+						<span class="icon style2 major fa-wordpress"></span>
+						<h3>WordPress</h3>
+
 					</section>
 					<section>
-						<span class="icon style2 major fa-paper-plane"></span>
-						<h3>Tempus</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon style2 major fa-desktop"></span>
-						<h3>Aliquam</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon style2 major fa-refresh"></span>
-						<h3>Elit</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon style2 major fa-hashtag"></span>
-						<h3>Morbi</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon style2 major fa-bolt"></span>
-						<h3>Turpis</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon style2 major fa-envelope"></span>
-						<h3>Ultrices</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon style2 major fa-leaf"></span>
-						<h3>Risus</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+						<span class="icon style2 major fa-search"></span>
+						<h3>SEO</h3>
 					</section>
 				</div>
 			</div>
@@ -189,11 +150,8 @@
 		<footer class="wrapper style1 align-center">
 			<div class="inner">
 				<ul class="icons">
-					<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon style2 fa-github"><span class="label">Github</span></a></li>
 					<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 			</div>
